--- a/_notebooks/2022-12-04-3.5-7-Hacks-and-Notes.ipynb
+++ b/_notebooks/2022-12-04-3.5-7-Hacks-and-Notes.ipynb
@@ -252,12 +252,13 @@
     "\n",
     "# given and index this will print InfoDb content\n",
     "def print_data(d_rec):\n",
-    "    print(d_rec[\"foodName\"], \"meat:\", d_rec[\"timeToPrepare\"])  # using comma puts space between values\n",
+    "    print(d_rec[\"foodName\"], \"Time to Prepare:\", d_rec[\"timeToPrepare\"])  # using comma puts space between values\n",
+    "    print(\"Meat:\", d_rec[\"meat\"])\n",
     "\n",
     "\n",
     "# for loop iterates on length of InfoDb\n",
     "def for_loop():\n",
-    "    print(\"For loop output\\n\")\n",
+    "    print(\"\")\n",
     "    for record in InfoDb:\n",
     "        print_data(record)\n",
     "\n",
