--- a/_notebooks/2022-12-04-3.5-7-Hacks-and-Notes.ipynb
+++ b/_notebooks/2022-12-04-3.5-7-Hacks-and-Notes.ipynb
@@ -134,14 +134,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "# Testing out relational operators\n",
     "# Practice with these statements\n",
     "\n",
-    "print(20 =/ 20) # How can you change the operator to print a value of False?\n",
+    "print(20 == 20) # How can you change the operator to print a value of False?\n",
     "\n",
     "x = 30\n",
     "y = 20\n",
@@ -149,7 +159,7 @@
     "print(x > y + z) # How can this return true by only manipulating the operator?\n",
     "\n",
     "# Manipulate the variables x, y, and z to make the below statement return true\n",
-    "print(x =/ z)"
+    "print(x == z)"
    ]
   },
   {
@@ -188,9 +198,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It lives in the desert\n",
+      "tiger\n",
+      "wildebeest\n",
+      "Fun Fact: The smallest shark is the dwarf lantern shark, and it is small enough to hold in your hand!\n",
+      "shark\n",
+      "jellyfish\n",
+      "blobfish\n",
+      "raven\n"
+     ]
+    }
+   ],
    "source": [
     "animals = [\"lion\", \"tiger\", \"wildebeest\", \"shark\", \"jellyfish\", \"blobfish\", \"raven\"]\n",
     "\n",
@@ -222,9 +247,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Chicken Alfredo Time to Prepare: 60 minutes\n",
+      "Meat: Chicken\n",
+      "Cheese Quesadilla Time to Prepare: 10 minutes\n",
+      "Meat: None\n",
+      "Beef Wellington Time to Prepare: 150 minutes\n",
+      "Meat: Beef\n"
+     ]
+    }
+   ],
    "source": [
     "# Define an empty List called InfoDb\n",
     "InfoDb = []\n",
@@ -264,13 +303,60 @@
     "\n",
     "for_loop()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 2\n",
+    "\n",
+    "Make a flowchart([here](https://www.lucidchart.com/pages/examples/flowchart-maker) is one we used) and write pseudocode for the following scenario.\n",
+    "- Mr. Yeung would like to grade live reviews. \n",
+    "- He wants to see if each student has at least 2 issues on their project. If they don't they receive a score of 2.0.\n",
+    "- If they have at least 2 issues, check that they have completed at least 5 of their scrumboard tasks.\n",
+    "- If they have completed 5 scrumboard tasks, give the student a 2.7. If they have not completed 5 scrumboard tasks, give them a score of 2.5. If they have completed more than 5 tasks, give them a score of 3.0.\n",
+    "- How much would a student with 3 issues and 1 complete scrumboard task receive?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "They would 3.0."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](flowchart.png)"
+   ]
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.8.10 64-bit",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
