--- a/_notebooks/2022-12-04-3.5-7-Hacks-and-Notes.ipynb
+++ b/_notebooks/2022-12-04-3.5-7-Hacks-and-Notes.ipynb
@@ -322,7 +322,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "They would 3.0."
+    "They would get 3.0."
    ]
   },
   {
