--- a/_notebooks/2022-12-05-3.8-10-Hacks-and-Notes.ipynb
+++ b/_notebooks/2022-12-05-3.8-10-Hacks-and-Notes.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "## Quiz Score\n",
     "\n",
-    "I got 9/10 right on the quiz, and I got the fourth question wrong. I got it wrong because I thought extend would add something to the list when append is used to add an element to the end of the list, so that is why I got it wrong.\n",
+    "I got 9/10 right on the quiz, and I got the fourth question wrong. I got it wrong because I thought extend would add something to the list, but extend actually combines two list while append is used to add an element to the end of the list, so that is why I got it wrong.\n",
     "\n",
     "![]({{site.baseurl}}/images/quizscore.png)"
    ]
