--- a/_notebooks/2022-12-05-3.8-10-Hacks-and-Notes.ipynb
+++ b/_notebooks/2022-12-05-3.8-10-Hacks-and-Notes.ipynb
@@ -7,10 +7,12 @@
     "# Video 3.8-10 Hacks\n",
     "> Hacks\n",
     "\n",
-    "- toc: true\n",
+    "- layout: page\n",
+    "- toc: true \n",
     "- badges: true\n",
-    "- comments: true\n",
-    "- categories: [week3, notes]"
+    "- sticky_rank: 1\n",
+    "- author: Haeryn Yu\n",
+    "- categories: [week2, notes]"
    ]
   },
   {
