--- a/_notebooks/2022-12-04-3.5-7-Hacks-and-Notes.ipynb
+++ b/_notebooks/2022-12-04-3.5-7-Hacks-and-Notes.ipynb
@@ -7,10 +7,11 @@
     "# Video 3.5-7 Hacks\n",
     "> Hacks\n",
     "\n",
-    "- toc: true\n",
+    "- toc: true \n",
     "- badges: true\n",
-    "- comments: true\n",
-    "- categories: [week3, notes]"
+    "- sticky_rank: 1\n",
+    "- author: Haeryn Yu\n",
+    "- categories: [week2, notes]"
    ]
   },
   {
