--- a/_notebooks/2022-12-02-3.1-2-Hacks-and-Notes.ipynb
+++ b/_notebooks/2022-12-02-3.1-2-Hacks-and-Notes.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Video 3.1-2 Notes and Hacks\n",
+    "# Video 3.1-2 Hacks\n",
     "\n",
     "- toc: true \n",
     "- badges: true\n",
