--- a/_notebooks/2022-12-05-3.8-10-Hacks-and-Notes.ipynb
+++ b/_notebooks/2022-12-05-3.8-10-Hacks-and-Notes.ipynb
@@ -21,6 +21,82 @@
     "\n",
     "I got 9/10 right on the quiz, and I got the fourth question wrong. I got it wrong because I thought extend would add something to the list, but extend actually combines two list while append is used to add an element to the end of the list, so that is why I got it wrong."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Excercises\n",
+    "\n",
+    "### Excercise 1\n",
+    "\n",
+    "- Task: Reverse a list utilizing features of lists and iteration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List before reverse :  [1, 2, 3, 4, 5]\n",
+      "List after reverse :  [5, 4, 3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "original_list = [1, 2, 3, 4, 5]\n",
+    "print(\"List before reverse : \",original_list)\n",
+    "reversed_list = []\n",
+    "for value in original_list:\n",
+    "  reversed_list = [value] + reversed_list\n",
+    "print(\"List after reverse : \", reversed_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Excercise 2\n",
+    "\n",
+    "- Task: Similar to insertion sort, this algorithm takes an unsorted array and returns a sorted array. Unlike insertion sort where you iterate through the each element and move the smaller elements to the front, this algorithm starts at the beginning and swaps the position of every element in the array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array before sort [9, 8, 4, 3, 5, 2, 6, 7, 1, 0]\n",
+      "array after sort [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list = [9, 8, 4, 3, 5, 2, 6, 7, 1, 0]\n",
+    "print(f\"array before sort {list}\")\n",
+    "def insertion_sort(list):\n",
+    "    for index in range(1,len(list)): # repeats through length of the array\n",
+    "        value = list[index]\n",
+    "        i = index - 1\n",
+    "        while i >= 0:\n",
+    "            if value < list[i]:\n",
+    "                list[i+1] = list[i] # shift number in slot i to the right\n",
+    "                list[i] = value # shift value left into slot i\n",
+    "                i = i - 1\n",
+    "            else:\n",
+    "                break\n",
+    "\n",
+    "IS = insertion_sort(list)\n",
+    "print(f\"array after sort {list}\")"
+   ]
   }
  ],
  "metadata": {
@@ -30,7 +106,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.10"
   },
   "orig_nbformat": 4,
