--- a/_posts/2022-12-06-3.9-11-Hacks.md
+++ b/_posts/2022-12-06-3.9-11-Hacks.md
@@ -2,9 +2,8 @@
 toc: true
 layout: post
 comments: true
-description: All Videos
 categories: [markdown]
-title: Unit 3 Sections 9 and 11
+title: Video 3.9-11 Hacks
 ---
 
 ## 3.9 Video 1
