--- a/_posts/2022-12-04-3.5-7-Hacks-and-Notes.md
+++ b/_posts/2022-12-04-3.5-7-Hacks-and-Notes.md
@@ -21,6 +21,56 @@ layout: notebook
         
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<h1 id="Unit-3-Section-5">Unit 3 Section 5<a class="anchor-link" href="#Unit-3-Section-5"> </a></h1><h2 id="Learning-Objectives">Learning Objectives<a class="anchor-link" href="#Learning-Objectives"> </a></h2><ul>
+<li>Write expressions with logical operators</li>
+<li>Evaluate expressions that use logical operators</li>
+</ul>
+<h2 id="Vocab">Vocab<a class="anchor-link" href="#Vocab"> </a></h2><p><mark>Boolean</mark> binary variable with only two possible values, "true" or "false"</p>
+<h3 id="Relational-Operators">Relational Operators<a class="anchor-link" href="#Relational-Operators"> </a></h3><p>There are multiple operators which are used to evaluate 2 variables. In pseudocode the relational operators are =, &gt;, &lt;, ≠, ≥, and ≤. Other languages use different formats to represent these operators. For example, Python uses != instead of ≠. These operators help determine the boolean value of a statement.</p>
+<h3 id="Logical-Operators">Logical Operators<a class="anchor-link" href="#Logical-Operators"> </a></h3><p>Logical operators allow for boolean values to be evaluated. Pseudocode uses the logical operators NOT, AND, and OR. Javascript uses the same logic, but uses different ways to represent the operators: &amp;&amp;(and), | |(or), |(not).</p>
+<p>Operators and booleans can be very useful, allowing a program to create an algorithm based on user inputs items stored in list. For example, operators can be used to perform multiple operations on lists.</p>
+<h1 id="Unit-3-Section-6">Unit 3 Section 6<a class="anchor-link" href="#Unit-3-Section-6"> </a></h1><h2 id="Learning-Objectives">Learning Objectives<a class="anchor-link" href="#Learning-Objectives"> </a></h2><ul>
+<li>Write conditional statements</li>
+<li>Determine the result of conditional statements</li>
+</ul>
+<h2 id="Vocab">Vocab<a class="anchor-link" href="#Vocab"> </a></h2><p><mark>Algorithm:</mark> Finite set of instructions that accomplish a specific task</p>
+<h3 id="Conditional-Statements">Conditional Statements<a class="anchor-link" href="#Conditional-Statements"> </a></h3><ul>
+<li>Conditional statements allow the code to act based on multiple conditions, such as user input or stored data. </li>
+<li>We can use conditionals in algorithms in order to receive different outputs from a set of code, and help achieve the general purpose of the algorithm.</li>
+</ul>
+<h3 id="Categories">Categories<a class="anchor-link" href="#Categories"> </a></h3><p>Two broad types of conditional statements are if statements and if-else statements</p>
+<ul>
+<li>if statement: will go through certain statements if the if expression is true</li>
+<li>if-else statement: will go through a statement no matter what, but the statement which is run depends on the if expression is true or false</li>
+</ul>
+<h3 id="Flow-Charts">Flow Charts<a class="anchor-link" href="#Flow-Charts"> </a></h3><ul>
+<li>We can use flowcharts to help organize the process of conditional statements.</li>
+<li>This allows us to diagram the work and have an image of what the process will look like</li>
+</ul>
+<p><a href="https://drive.google.com/file/d/1o__7LmFvdoKCC1SAaTlCExFFLk48KaiU/view?usp=share_link">A flowchart</a></p>
+<p>We can use this to write pseudocode.</p>
+<p>S &lt;-- 12
+IF (S MOD 2 = 0)
+{
+    DISPLAY (S)
+}
+ELSE
+{
+    DISPLAY ("This number is not even.")
+}</p>
+<p>Converting this to a sequence of python code is very easy thanks to having an easy plan to follow.</p>
+<h1 id="Unit-3-Section-7">Unit 3 Section 7<a class="anchor-link" href="#Unit-3-Section-7"> </a></h1><h2 id="Learning-Objectives">Learning Objectives<a class="anchor-link" href="#Learning-Objectives"> </a></h2><p>Write nested conditional statements Determine the result of nested conditional statement</p>
+<h2 id="Vocab">Vocab<a class="anchor-link" href="#Vocab"> </a></h2><p><mark>Nested conditional:</mark> A conditional inside of a conditional</p>
+<h3 id="Nested-Conditionals">Nested Conditionals<a class="anchor-link" href="#Nested-Conditionals"> </a></h3><p>Nested conditionals are often used in algorithms in order to print specific data or run certain tasks.</p>
+<p>We can use conditionals inside conditionals to create further conditions in algorithms.</p>
+<p>We can use flowcharts to help display an easy to understand diagram of what we want a code segment to do.</p>
+<p><a href="https://drive.google.com/file/d/11tJBfrTXFenYGCzFy1t2g9KMh5OoGcq5/view?usp=share_link">Flowchart</a></p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <h1 id="3.5-Hacks">3.5 Hacks<a class="anchor-link" href="#3.5-Hacks"> </a></h1><h2 id="Binary-Practice">Binary Practice<a class="anchor-link" href="#Binary-Practice"> </a></h2><p>Using psuedocode operators determine if the statements are true or false. The number type will be indicated in parentheses.</p>
 <p><strong>1. 90(D) = 1000(B)</strong></p>
 <ul>
