--- a/_notebooks/2022-12-05-3.8-10-Hacks-and-Notes.ipynb
+++ b/_notebooks/2022-12-05-3.8-10-Hacks-and-Notes.ipynb
@@ -16,7 +16,64 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Notes 3.8-10\n",
+    "\n",
+    "## Section 8\n",
+    "- Understanding What is Iteration\n",
+    "- Using for and while loops\n",
+    "\n",
+    "### Necessary Vocabulary\n",
+    "- *Iteration*  - Repitition of a Process <br>\n",
+    "- *`For Loop`* - FOR LOOP repeats a function for a set number of times; I is the number of times repeated <br>\n",
+    "- *`While Loop`*  - The while loop is used to repeat a section of code an unknown number of times until a specific condition is met <br>\n",
+    "- *Initialization* - What sets the counter variable to a starting value. For example (var i = 0) represents an initial value of 0. <br>\n",
+    "- *Condition* - Allows the computer to know whether or not to keep repeating the loop.\n",
+    "- *increment/decrement* - Modifies the counter variable after each repetition.\n",
+    "\n",
+    "### What is Iteration?\n",
+    "Iterative statements are also called loops, and they repeat themselves over and over until the condition for stopping is met. \n",
+    "\n",
+    "In College Board's Pseudocode, the first is a REPEAT n TIMES loop, where the n represents some number.\n",
+    "\n",
+    "The second type of loop is a REPEAT UNTIL (condition) loop, where the loop will continue to run until a condition is met.\n",
+    "\n",
+    "Conceptually, a while loop is very similar to an if conditional, except that a while is continually executed until it's no longer true and an if is only executed once.\n",
+    "\n",
+    "## Section 10\n",
+    "- Understanding how to edit lists by adding, inserting, and removing data\n",
+    "- Using loops to iterate through lists and abstract data \n",
+    "- Determine the results or side effects of iteration statements\n",
+    "- Write sorting algorithms using iteration\n",
+    "\n",
+    "### Necessary Vocabulary\n",
+    "\n",
+    "- *Indexing* / *List Index* - The position of an element in a list, starting from 0 <br>\n",
+    "- *`append`*, *`remove`*, *`pop`* - Various methods, append adds an element to the end, remove removes at an index, and pop removes the last item. <br>\n",
+    "- *Elements [in a list]* - An item in a list. <br>\n",
+    "- *Nesting* - Having one data type or function inside another data type or function, such as lists or loops. <br>\n",
+    "- *array* - Another name for a list, depends on the language\n",
+    "\n",
+    "### What are Lists?\n",
+    "- Lists are a collection of data in a sequence that is an iterable\n",
+    "- Each sequence is demarcated with an <mark>index</mark>, starting from 0. This is known as <mark>base 0 indexing</mark>\n",
+    "- In memory, it is stored as a variable name with multiple pointers to each variable stored in a certain order\n",
+    "- Lists can also be called arrays\n",
+    "- Lists have methods that act upon the list and change them. This moves the pointers within RAM to change the parts of the list.\n",
+    "\n",
+    "### Nested Lists\n",
+    "\n",
+    "#### Uses of Nested lists\n",
+    "Placing lists within lists allows you to have arrays of similar data together, and create complexity. <br>\n",
+    "\n",
+    "Some uses include: \n",
+    "- Creating 2d Arrays \n",
+    "- Storing similar, but slightly different categories (sublists)\n",
+    "- Create a matrix\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
