--- a/_posts/2022-12-05-3.8-10-Hacks-and-Notes.md
+++ b/_posts/2022-12-05-3.8-10-Hacks-and-Notes.md
@@ -21,6 +21,55 @@ layout: notebook
         
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<h1 id="Notes-3.8-10">Notes 3.8-10<a class="anchor-link" href="#Notes-3.8-10"> </a></h1><h2 id="Section-8">Section 8<a class="anchor-link" href="#Section-8"> </a></h2><ul>
+<li>Understanding What is Iteration</li>
+<li>Using for and while loops</li>
+</ul>
+<h3 id="Necessary-Vocabulary">Necessary Vocabulary<a class="anchor-link" href="#Necessary-Vocabulary"> </a></h3><ul>
+<li><em>Iteration</em>  - Repitition of a Process <br></li>
+<li><em><code>For Loop</code></em> - FOR LOOP repeats a function for a set number of times; I is the number of times repeated <br></li>
+<li><em><code>While Loop</code></em>  - The while loop is used to repeat a section of code an unknown number of times until a specific condition is met <br></li>
+<li><em>Initialization</em> - What sets the counter variable to a starting value. For example (var i = 0) represents an initial value of 0. <br></li>
+<li><em>Condition</em> - Allows the computer to know whether or not to keep repeating the loop.</li>
+<li><em>increment/decrement</em> - Modifies the counter variable after each repetition.</li>
+</ul>
+<h3 id="What-is-Iteration?">What is Iteration?<a class="anchor-link" href="#What-is-Iteration?"> </a></h3><p>Iterative statements are also called loops, and they repeat themselves over and over until the condition for stopping is met.</p>
+<p>In College Board's Pseudocode, the first is a REPEAT n TIMES loop, where the n represents some number.</p>
+<p>The second type of loop is a REPEAT UNTIL (condition) loop, where the loop will continue to run until a condition is met.</p>
+<p>Conceptually, a while loop is very similar to an if conditional, except that a while is continually executed until it's no longer true and an if is only executed once.</p>
+<h2 id="Section-10">Section 10<a class="anchor-link" href="#Section-10"> </a></h2><ul>
+<li>Understanding how to edit lists by adding, inserting, and removing data</li>
+<li>Using loops to iterate through lists and abstract data </li>
+<li>Determine the results or side effects of iteration statements</li>
+<li>Write sorting algorithms using iteration</li>
+</ul>
+<h3 id="Necessary-Vocabulary">Necessary Vocabulary<a class="anchor-link" href="#Necessary-Vocabulary"> </a></h3><ul>
+<li><em>Indexing</em> / <em>List Index</em> - The position of an element in a list, starting from 0 <br></li>
+<li><em><code>append</code></em>, <em><code>remove</code></em>, <em><code>pop</code></em> - Various methods, append adds an element to the end, remove removes at an index, and pop removes the last item. <br></li>
+<li><em>Elements [in a list]</em> - An item in a list. <br></li>
+<li><em>Nesting</em> - Having one data type or function inside another data type or function, such as lists or loops. <br></li>
+<li><em>array</em> - Another name for a list, depends on the language</li>
+</ul>
+<h3 id="What-are-Lists?">What are Lists?<a class="anchor-link" href="#What-are-Lists?"> </a></h3><ul>
+<li>Lists are a collection of data in a sequence that is an iterable</li>
+<li>Each sequence is demarcated with an <mark>index</mark>, starting from 0. This is known as <mark>base 0 indexing</mark></li>
+<li>In memory, it is stored as a variable name with multiple pointers to each variable stored in a certain order</li>
+<li>Lists can also be called arrays</li>
+<li>Lists have methods that act upon the list and change them. This moves the pointers within RAM to change the parts of the list.</li>
+</ul>
+<h3 id="Nested-Lists">Nested Lists<a class="anchor-link" href="#Nested-Lists"> </a></h3><h4 id="Uses-of-Nested-lists">Uses of Nested lists<a class="anchor-link" href="#Uses-of-Nested-lists"> </a></h4><p>Placing lists within lists allows you to have arrays of similar data together, and create complexity. <br></p>
+<p>Some uses include:</p>
+<ul>
+<li>Creating 2d Arrays </li>
+<li>Storing similar, but slightly different categories (sublists)</li>
+<li>Create a matrix</li>
+</ul>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="Quiz-Score">Quiz Score<a class="anchor-link" href="#Quiz-Score"> </a></h2><p>I got 9/10 right on the quiz, and I got the fourth question wrong. I got it wrong because I thought extend would add something to the list, but extend actually combines two list while append is used to add an element to the end of the list, so that is why I got it wrong.</p>
 
 </div>
