--- a/_posts/2022-12-06-3.9-11-Hacks-and-Notes.md
+++ b/_posts/2022-12-06-3.9-11-Hacks-and-Notes.md
@@ -3,7 +3,7 @@ toc: true
 layout: post
 comments: true
 description: 3.9-11 Notes
-categories: [markdown]
+categories: [week4, notes]
 title: Video 3.9-11 Hacks
 ---
 ## Notes
