--- a/_notebooks/2022-12-08-3.12-13-Hacks-and-Notes.ipynb
+++ b/_notebooks/2022-12-08-3.12-13-Hacks-and-Notes.ipynb
@@ -64,6 +64,114 @@
     "It is important to understand you procudeures procedure does when creating one as it will help you create a impactful procedure\n",
     "\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hacks\n",
+    "\n",
+    "### 3.12 Part 1 Hacks\n",
+    "- Problem 1: This problem involves parameters\n",
+    "\n",
+    "Qais is writing code to calculate formulas from his math class. He's currently working on a procedure to calculate average speed, based on this formula:\n",
+    "\n",
+    "Average speed = Total Time/Total Distance​\n",
+    "\n",
+    "Highlight which of these is the best procedure for calculating and displaying average speed.\n",
+    "\n",
+    "PROCEDURE calcAvgSpeed (distance, time) { DISPLAY (distance/time) }\n",
+    "\n",
+    "PROCEDURE calcAvgSpeed (distance) { DISPLAY (distance/time) }\n",
+    "\n",
+    "PROCEDURE calcAvgSpeed (distance, time) { DISPLAY (time/distance) }\n",
+    "\n",
+    "- Problem 2: Procedures with return values\n",
+    "James Hunter is looking through his classmate's program and sees a procedure called heightenEmotions: PROCEDURE heightenEmotions(myEmotion)\n",
+    "\n",
+    "{ moreEnergy ← CONCAT(myEmotion, \"!!!\")\n",
+    "\n",
+    "moreVolume ← UPPER(moreEnergy)\n",
+    "\n",
+    "RETURN moreVolume }\n",
+    "\n",
+    "That procedure manipulates strings using two built-in procedures, CONCAT for concatenating two strings together, and UPPER for converting a string to uppercase.\n",
+    "\n",
+    "James Hunter then sees this line of code:\n",
+    "\n",
+    "heightenEmotions(\"im mad\")\n",
+    "\n",
+    "After that line of code runs, will nothing be displayed?\n",
+    "\n",
+    "False\n",
+    "- Problem 3:\n",
+    "Bubz is writing a program to calculate the carbon footprint of his activities. The procedure calcFlightFootprint calculates the pounds of carbon dioxide produced per passenger in a flight that covers a given number of miles and seats a given number of passengers.\n",
+    "\n",
+    "PROCEDURE calcFlightFootprint(numMiles, numPassengers) { CO2_PER_MILE ← 53.29\n",
+    "\n",
+    "carbonPerFlight ← numMiles * CO2_PER_MILE\n",
+    "\n",
+    "carbonPerPassenger ← carbonPerFlight / numPassengers\n",
+    "\n",
+    "RETURN carbonPerPassenger\n",
+    "\n",
+    "}\n",
+    "\n",
+    "Bubz wants to use that procedure to calculate the total footprint for his two upcoming flights: LA to NY: 2,451 miles and 118 passengers NY to London: 3,442 miles and 252 passengers\n",
+    "\n",
+    "Which of these code snippets successfully calculates and stores her total footprint? Highlight 2 answers.\n",
+    "\n",
+    "totalFootprint ← calcFlightFootprint(2451, 118) + calcFlightFootprint(3442, 252)\n",
+    "\n",
+    "totalFootprint ← calcFlightFootprint((2451, 118) + (3442, 252))\n",
+    "\n",
+    "\n",
+    "### 3.12 Homework/Hacks part 2\n",
+    "\n",
+    "a = 729\n",
+    "\n",
+    "the cost is $190.30\n",
+    "\n",
+    "answer = 39.444\n",
+    "\n",
+    "### 3.13 Hacks \n",
+    "1. Create a procedure that is meant to replace the top running backs yards per game in one season if the current running back has more yards per game\n",
+    "Necessary Parameters: toprbyardspg(100), currentrbyards(1260), totalGames(12)\n",
+    "\n",
+    "if currentrbyards(1260) > toprbyardspg(100)\n",
+    "    replace(toprbyardspg(100), currentrbyards(1260), totalGames(12))\n",
+    "\n",
+    "2. Write a procedure that will allow the A+ to get to the 1, while avoiding the black boxes.\n",
+    "PROCEDURE getAplus(){\n",
+    "If (can_MoveForward):\n",
+    "Move_Forward\n",
+    "Else (can_MoveRight):\n",
+    "Rotate_Right\n",
+    "Move_Forward\n",
+    "If (can_MoveLeft);\n",
+    "Rotate_Left\n",
+    "Move_forward\n",
+    "}\n",
+    "\n",
+    "3. Which Is the Correct Way to define the Name of a Procedure?\n",
+    "\n",
+    "B. PROCEDURE MyList\n",
+    "\n",
+    "because procedure should be in all caps and part of the procedure name should be capitalized\n",
+    "\n",
+    "4. Write A Procedure That gets the BeachBall To the Green Square\n",
+    "PROCEDURE BallToGreen{\n",
+    "Rotate_Left\n",
+    "Move_Forward\n",
+    "Rotate_Right \n",
+    "Move_Forward( until count = 6)\n",
+    "break\n",
+    "Rotate_Left\n",
+    "Move_Forward (until count=2) \n",
+    "break\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
