--- a/_notebooks/2022-12-12-3.14-15-Hacks-and-Notes.ipynb
+++ b/_notebooks/2022-12-12-3.14-15-Hacks-and-Notes.ipynb
@@ -59,8 +59,15 @@
     "\n",
     "### Short Answer\n",
     "1. It is more efficient and speeds up the process of being able to look through the library rather than creating code that has be made for a word that already exists. For example, the randint function is where start is the minimum value and stop is the maximum value so I do not have to make a new piece of code to use that function. \n",
-    "2. \n",
-    "```python\n",
+    "2. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import random \n",
     "\n",
     "names_string = input(\"Give me everybody's names, seperated by a comma.\") #The function asks for names to input and is the piece of code that makes a list. \n",
@@ -72,35 +79,58 @@
     "\n",
     "person_who_will_pay = names[random_choice] #This chooses the random name\n",
     "\n",
-    "print(f\"{person_who_will_pay} is going to buy the meal today!\") #This is the output.\n",
-    "```\n",
+    "print(f\"{person_who_will_pay} is going to buy the meal today!\") #This is the output."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "### Coding Challenges\n",
-    "1. Create a program to pick five random names from a list of at least 15 names\n",
-    "```python\n",
+    "1. Create a program to pick five random names from a list of at least 15 names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import random \n",
     "\n",
-    "names = [John, Jake, Jack, Alex, Ryan, Jaiden, Jayden, Jaden, Ethan, Emily, Ella, Ellie, Hailey, Kaylee, Bob]\n",
+    "names = [\"John\", \"Jake\", \"Jack\", \"Alex\", \"Ryan\", \"Jaiden\", \"Jayden\", \"Jaden\", \"Ethan\", \"Emily\", \"Ella\", \"Ellie\", \"Hailey\", \"Kaylee\", \"Bob\"]\n",
     "\n",
     "for i in range(5)\n",
     "    random_choice1 = random.randint(0, names - 1) \n",
     "    i += 1\n",
     "\n",
-    "randomName = names[random_choice1, random_choice2, random_choice3, random_choice4, random_choice5] \n",
+    "randomName = names[random_choice1] \n",
     "\n",
-    "print(randomName) \n",
-    "```\n",
-    "2. Create a program to simulate a dice game where each player rolls two fair dice (6 sides); the player with the greater sum wins\n",
-    "```python\n",
+    "print(randomName) \n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Create a program to simulate a dice game where each player rolls two fair dice (6 sides); the player with the greater sum wins"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def dice(n):\n",
     "    rolls = []\n",
     "    for i in range(n):\n",
     "        two_dice = random.randint(1, 6) + random.randint(1, 6)\n",
     "        rolls.append(two_dice)\n",
-    "    return rolls\n",
-    "```\n",
-    "\n",
-    "\n"
+    "    return rolls"
    ]
   }
  ],
