--- a/_notebooks/2022-12-12-3.14-15-Hacks-and-Notes.ipynb
+++ b/_notebooks/2022-12-12-3.14-15-Hacks-and-Notes.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Video 3.14-7-15 Hacks\n",
+    "# Video 3.14-15 Hacks\n",
     "\n",
     "- toc: true \n",
     "- badges: true\n",
