--- a/_posts/2022-12-12-3.14-15-Hacks-and-Notes.md
+++ b/_posts/2022-12-12-3.14-15-Hacks-and-Notes.md
@@ -55,6 +55,7 @@ layout: notebook
 <p>A general way to to write this is randint(start, stop) where start is the minimum value, stop is the maximum value. And this allows you to generate a random integer from a set range and this can help you create code for things like a coin-flip, dice roll, and anything else which needs an inclusive range.</p>
 <p>Randrange:</p>
 <p>In general randrange can be written like randrange(start, stop, step) where start is the minimum value, stop is the maximum value (like the randint function), and step is the incriment the values can be and its default value is 1. If start = 0 and step = 5 all the values that can by outputed are 0 and multiples of 5. And if start = 2 and step = 3 the output would be 2 and a multiple of 3 plus 2.</p>
+<h2 id="Reflection">Reflection<a class="anchor-link" href="#Reflection"> </a></h2><p>I learned about the random function and what documentation, libraries, and application programming interfaces are. The random function has three other functions that are syntax, randint, randrange and they all have different purposes and are way more efficient than coding it from the beginning with just python. This lesson was very good and I learned a lot!</p>
 <h2 id="Hacks">Hacks<a class="anchor-link" href="#Hacks"> </a></h2><h3 id="Multiple-Choice">Multiple Choice<a class="anchor-link" href="#Multiple-Choice"> </a></h3><ol>
 <li>B because the random functions chooses between the range of numbers and it also includes the numbers. </li>
 <li>A because x is the number that starts, y is the number that stops, z is the step this is because that is how they are formatted. </li>
