--- a/_notebooks/2022-12-12-3.14-15-Hacks-and-Notes.ipynb
+++ b/_notebooks/2022-12-12-3.14-15-Hacks-and-Notes.ipynb
@@ -49,6 +49,10 @@
     "\n",
     "In general randrange can be written like randrange(start, stop, step) where start is the minimum value, stop is the maximum value (like the randint function), and step is the incriment the values can be and its default value is 1. If start = 0 and step = 5 all the values that can by outputed are 0 and multiples of 5. And if start = 2 and step = 3 the output would be 2 and a multiple of 3 plus 2.\n",
     "\n",
+    "## Reflection\n",
+    "\n",
+    "I learned about the random function and what documentation, libraries, and application programming interfaces are. The random function has three other functions that are syntax, randint, randrange and they all have different purposes and are way more efficient than coding it from the beginning with just python. This lesson was very good and I learned a lot!\n",
+    "\n",
     "## Hacks\n",
     "\n",
     "### Multiple Choice\n",
