--- a/_notebooks/2022-12-13-3.16-Hacks-and-Notes.ipynb
+++ b/_notebooks/2022-12-13-3.16-Hacks-and-Notes.ipynb
@@ -13,6 +13,23 @@
     "- author: Haeryn Yu\n",
     "- categories: [week5, notes]"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Simulations\n",
+    "\n",
+    "A simulation is an simpler abstraction of an very complicated natural phenomena. It removes details that are unnecessary or are too difficult to simulate. The level of abstraction in a simulation depends on why we're creating it in the first place. \n",
+    "\n",
+    "### Why would you make a simulation?\n",
+    "- Safer: Many safety hazards that can be encountered through experimentation can be avoided with simulations. Ex: Designing a boat to travel to an island\n",
+    "- Less Expensive: Since real world equipment isn’t needed to make and run a simulation (only computer and programmer needed), this makes simulations an inexpensive way to test something. Ex: Boat example again\n",
+    "- Repeatable: Once a simulation is created, it’s easy to repeat it to get different but similar results.\n",
+    "- Can Make Predictions: Something that can’t be done with experiments is making predictions. Simulations are useful for this because previous data can be used to predict what will happen in the future. Ex: Global population\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
