--- a/_posts/2022-12-13-3.16-Hacks-and-Notes.md
+++ b/_posts/2022-12-13-3.16-Hacks-and-Notes.md
@@ -19,6 +19,19 @@ layout: notebook
 
 <div class="container" id="notebook-container">
         
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="Simulations">Simulations<a class="anchor-link" href="#Simulations"> </a></h2><p>A simulation is an simpler abstraction of an very complicated natural phenomena. It removes details that are unnecessary or are too difficult to simulate. The level of abstraction in a simulation depends on why we're creating it in the first place.</p>
+<h3 id="Why-would-you-make-a-simulation?">Why would you make a simulation?<a class="anchor-link" href="#Why-would-you-make-a-simulation?"> </a></h3><ul>
+<li>Safer: Many safety hazards that can be encountered through experimentation can be avoided with simulations. Ex: Designing a boat to travel to an island</li>
+<li>Less Expensive: Since real world equipment isn’t needed to make and run a simulation (only computer and programmer needed), this makes simulations an inexpensive way to test something. Ex: Boat example again</li>
+<li>Repeatable: Once a simulation is created, it’s easy to repeat it to get different but similar results.</li>
+<li>Can Make Predictions: Something that can’t be done with experiments is making predictions. Simulations are useful for this because previous data can be used to predict what will happen in the future. Ex: Global population</li>
+</ul>
+
+</div>
+</div>
+</div>
 </div>
  
 
