--- a/_notebooks/2022-12-13-3.16-Hacks-and-Notes.ipynb
+++ b/_notebooks/2022-12-13-3.16-Hacks-and-Notes.ipynb
@@ -30,6 +30,15 @@
     "- Can Make Predictions: Something that can’t be done with experiments is making predictions. Simulations are useful for this because previous data can be used to predict what will happen in the future. Ex: Global population\n",
     "\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hacks\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
