--- a/_posts/2022-12-08-3.12-13-Hacks-and-Notes.md
+++ b/_posts/2022-12-08-3.12-13-Hacks-and-Notes.md
@@ -99,7 +99,8 @@ Bubz is writing a program to calculate the carbon footprint of his activities. T
 Necessary Parameters: toprbyardspg(100), currentrbyards(1260), totalGames(12)</li>
 </ol>
 <p>if currentrbyards(1260) &gt; toprbyardspg(100)
-    replace(toprbyardspg(100), currentrbyards(1260), totalGames(12))</p>
+    replace(toprbyardspg(100), currentrbyards(1260), totalGames(12))
+    currentrbyards(1260)/ totalGames(12)</p>
 <ol>
 <li><p>Write a procedure that will allow the A+ to get to the 1, while avoiding the black boxes.
 PROCEDURE getAplus(){
