--- a/_posts/2022-12-13-3.16-Hacks-and-Notes.md
+++ b/_posts/2022-12-13-3.16-Hacks-and-Notes.md
@@ -32,6 +32,12 @@ layout: notebook
 </div>
 </div>
 </div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="Hacks">Hacks<a class="anchor-link" href="#Hacks"> </a></h2>
+</div>
+</div>
+</div>
 </div>
  
 
