--- a/_posts/2022-12-08-3.12-13-Hacks-and-Notes.md
+++ b/_posts/2022-12-08-3.12-13-Hacks-and-Notes.md
@@ -100,7 +100,8 @@ Necessary Parameters: toprbyardspg(100), currentrbyards(1260), totalGames(12)</l
 </ol>
 <p>if currentrbyards(1260) &gt; toprbyardspg(100)
     replace(toprbyardspg(100), currentrbyards(1260), totalGames(12))
-    currentrbyards(1260)/ totalGames(12)</p>
+    currentrbyards(1260)/ totalGames(12)
+    = 105</p>
 <ol>
 <li><p>Write a procedure that will allow the A+ to get to the 1, while avoiding the black boxes.
 PROCEDURE getAplus(){
